[package]
name = "retrobot3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]